# pdCalc

./: .gitignore  CMakeLists.txt  README.md  pdCalc-simple-cli.cpp  pdCalc-simple-gui.cpp
app/: CMakeLists.txt
app/pdCalc-Cli/: CMakeLists.txt  Cli.cpp  pdCalc-simple-cli.cpp
app/pdCalc-Gui/: Button.cpp  Button.h  CMakeLists.txt  Gui.cpp  Gui.h  pdCalc-simple-gui.cpp
include/: AppObservers.h  Cli.h  Command.h  CommandRepository.h  CoreCommands.h  Stack.h  StoredProcedure.h  UserInterface.h
src/: AppObservers.cpp  CMakeLists.txt  Command.cpp  CommandDispatcher.cpp  CommandRepository.cpp  CoreCommands.cpp  Gui.cpp  Observer.cpp  PlatformFactory.cpp  PluginLoader.cpp  PosixDynamicLoader.cpp  Publisher.cpp  Stack.cpp  StoredProcedure.cpp
